<resources>
    <!-- app name -->
    <string name="app_name">Wallzee</string>

    <!-- extra -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">4K Wallpaper and Ringtones Collection</string>
    <string name="action_search">Search</string>

    <!-- menu names -->
    <string name="menu_home">Home</string>
    <string name="menu_double">Double</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate app</string>
    <string name="share_this_app">Share App</string>
    <string name="feedback_amp_bugs">Contact Us</string>
    <string name="follow_us_on_instagram">Instagram</string>

    <!-- tabs name -->
    <string name="menu_collection">Categories</string>
    <string name="menu_latest">Wallpaper</string>
    <string name="menu_live">Live</string>
    <string name="menu_doubles">Double</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_random">Random</string>
    <string name="menu_ringtone">Ringtone</string>

    <!-- layout and toast -->
    <string name="whoops">Whoops</string>
    <string name="no_wallpaper_found">There is No Wallpaper Found</string>
    <string name="option_retry">Retry</string>
    <string name="favorite_removed">Wallpaper Removed from Favorite</string>
    <string name="favorite_added">Wallpaper Added to Favorite</string>

    <!-- SETTING PAGE -->
    <string name="version_label">Current Version</string>
    <string name="search_hint">Which wallpaper you want?</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="msg_clearing_cache">Clear CacheAre you sure want to clear cache?</string>
    <string name="msg_please_wait">Please Wait…</string>
    <string name="msg_cache_cleared">Cache has been cleared !</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="msg_clear_cache">Clear Cache</string>
    <string name="display_wallpaper">Display Wallpaper</string>
    <string name="wallpaper_columes">2 Columes</string>
    <string name="msg_about_version">Version</string>
    <string name="storage">Wallpaper Save Location</string>
    <string name="storagelocation">Internal Storage/</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="label_cache">Remove image cache from your storage which created after loading
        wallpaper thumbnails. Currently : </string>
    <string name="title_notification">Push Notification</string>
    <string name="label_notification">Want Wallpaper Notifications from </string>
    <string name="policy_privacy">Privacy Policy</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="sets">Sets</string>
    <string name="size">Size</string>
    <string name="resolution">Resolution</string>
    <string name="app_copyright">4K Wallpaper App - Created by G Devs</string>


    <!--layout screens-->
    <string name="failed_title_text">Whoops !</string>
    <string name="msg_no_item">it looks like there are no content available at this time</string>
    <string name="btn_retry">Retry</string>
    <string name="failed_text">There is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="dummy_quote">Money and success don’t change people they merely amplify what is already there.</string>
    <string name="no_category_found">it looks like there are no category available at this time</string>
    <string name="dev_name">YMG Developers</string>
    <string name="exit_msg">Press Back Button again to Exit</string>
    <string name="error_msg">Something went wrong</string>
    <string name="close_msg">Close</string>
    <string name="reload_msg">Try Again</string>
    <string name="set_us">Set Wallpaper</string>

    //URL
    <string name="privacy_policy_url">https://privacypolicies.com/privacy/view/c51c78f03631c7591d817e9d0c30c84c</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Gdevs</string>

    //ads
    <string name="admob_app_id">ca-app-pub-1603174515014968~1163008472</string>
    <string name="applovin_sdk_key">x5ImfykxaMWs-ntpF6fuNGlFBtC9zBJuGcewTMs8kN_h9sVOz9HLQ0abtnmqy4iDgM8Ek_MRML7WCdv123456</string>
    <string name="set_home_screen">Home Screen</string>
    <string name="set_home_lock_screen">Home Screen and Lock Screen</string>
    <string name="set_lock_screen">Lock Screen</string>
    <string name="set_both">Both Screen</string>
    <string name="dialog_set_title">Croping Wallpaper</string>
    <string name="msg_preparing_wallpaper">Please Wait</string>
    <string name="dialog_option_ok">Okay</string>
    <string name="snack_bar_failed">Try Again</string>
    <string name="btn_set_wallpaper">Set Wallpaper</string>
    <string name="default_web_client_id">734990436650-5rosd33ro7l86q6tg3799nkssq072cme.apps.googleusercontent.com</string>
    <string name="no_favorite_found">There is No Favorite Wallpaper\'s</string>
    <string name="offensive_content">Offensive Content</string>
    <string name="poor_resolution">Poor Resolution</string>
    <string name="copyright_issue">Copyright Issue</string>
    <string name="mislading_information">Mislading Information</string>
    <string name="duplicate_wallpaper">Duplicate Wallpaper</string>
    <string name="watermark_issue">Watermark Issue</string>
    <string name="harmful_content">Harmful Content</string>
    <string name="splashsscreen_small_title">D-square</string>

</resources>