<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:maxads="http://schemas.applovin.com/android/1.0">
    <group
        android:id="@+id/top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/upload"
            android:icon="@drawable/ic_crown"
            android:title="Upload" />
    </group>
    <group
        android:id="@+id/mid"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_places_mountains"
            android:title="@string/wallpapers" />
        <item
            android:id="@+id/nav_ringtone"
            android:icon="@drawable/ic_actions_ringtone"
            android:title="@string/menu_ringtone" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_actions_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
    <group
        android:id="@+id/bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_ic_actions_star"
            android:title="@string/rate_this_app" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_this_app" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_ic_contact_mail"
            android:title="@string/feedback_amp_bugs" />
        <item
            android:id="@+id/nav_insta"
            android:icon="@drawable/ic_instagram_outlined"
            android:title="@string/follow_us_on_instagram" />
    </group>
</menu>