<!-- res/layout/dialog_report.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bgMain"
        app:cardCornerRadius="16dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="Report Wallpaper"
            android:textColor="@color/black"
            android:fontFamily="@font/bold"
            />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioOffensive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offensive_content" />

        <RadioButton
            android:id="@+id/radioResolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poor_resolution" />

        <RadioButton
            android:id="@+id/radioCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_issue" />

        <RadioButton
            android:id="@+id/radioMislading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mislading_information" />

        <RadioButton
            android:id="@+id/radioDuplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duplicate_wallpaper" />

        <RadioButton
            android:id="@+id/radioWatermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watermark_issue" />

        <RadioButton
            android:id="@+id/radioHarmful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harmful_content" />

        <!-- Add more radio buttons as needed -->

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:id="@+id/mbtnYes"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/bg_button_background">


            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report"
                android:drawablePadding="10sp"
                android:textAllCaps="false"
                android:fontFamily="@font/bold"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mbtnNo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/bg_button_background">


            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:drawablePadding="10sp"
                android:textAllCaps="false"
                android:fontFamily="@font/bold"
                />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
