<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:tint="#919191"
            android:layout_margin="10dp"
            android:src="@drawable/ic_no_internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed_title_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/failed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/failed_text"
            android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/failed_retry"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/bg_button_background"
                android:text="@string/btn_retry"
                android:textColor="@color/white"
                android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>